
package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message ReservationAll {
    required int32 reservation_id = 1;
    required int32 room_id = 2;
    required int32 room_guest_number= 3;
    required int32 room_price_en= 4;
    required string first_name = 5;
    optional string last_name = 6;
    required string email = 7;
    optional string phone = 8;
    required string start_date = 9;
    required string end_date = 10;
    optional int32 processed = 11;
    optional int32 num_nights = 12;
    optional int32 num_guests = 13;
    optional string status = 14;
    optional int32 total_price = 15;
    optional int32 extras_price = 16;
	optional bool is_paid  = 17;
    optional bool has_breakfast  = 18;
    required google.protobuf.Timestamp created_at = 19;
    optional google.protobuf.Timestamp updated_at = 20;
    required string room_name_sr = 21;    // Naziv sobe na srpskom
    required string room_name_en = 22;   // Naziv sobe na engleskom
    required string room_name_bg = 23;   // Naziv sobe na bugarskom
}